--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -5,13 +5,13 @@
   height: 100vh;
 }
 
-.homepageContainer {
+.pageContainer {
   display: flex;
   flex-direction: column;
   row-gap: 0.25rem;
   width: 100%;
   max-width: 1280px;
-  margin: 50px 150px 0;
+  margin: 0 100px 0 150px;
 
   h1 {
     font-size: 96px;
@@ -20,7 +20,7 @@
   }
 
   p {
-    max-width: 1000px;
+    max-width: 970px;
     font-size: 1.2rem;
     line-height: 1.75rem;
     margin-bottom: 1rem;
@@ -33,6 +33,23 @@
     cursor: pointer;
     &:hover {
       text-decoration: underline;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .pageContainer {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.25rem;
+    width: 100%;
+    margin-right: 1rem;
+    margin-left: 1rem;
+
+    h1 {
+      font-size: 56px;
+      font-weight: 900;
+      margin-bottom: 1rem;
     }
   }
 }
