--- a/components/RedirectIconsNav/RedirectIconsNav.module.scss
+++ b/components/RedirectIconsNav/RedirectIconsNav.module.scss
@@ -1,10 +1,13 @@
 .redirectIconsNavContainer {
   margin-top: 3rem;
   display: flex;
-  column-gap: 2rem;
 
   a {
     height: 32px;
+    margin-left: 2rem;
+    &:first-child {
+      margin-left: 0;
+    }
   }
 
   img {
